--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -21,11 +21,11 @@
 
     img {
         width: 90px;
-        height: 20px;
+        height: auto;
 
         @media screen and (min-width: 2000px) {
-            width: 180px;
-            height: 40px;
+            width: 80px;
+            height: auto;
         }
     }
 }
@@ -81,8 +81,8 @@
 }
 
 .app__navbar-menu {
-    width: 35px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
 
     position: relative;
@@ -93,8 +93,8 @@
     background: var(--secondary-color);
 
     svg {
-        width: 35px;
-        height: 35px;
+        width: 25px;
+        height: 25px;
         color: var(--white-color);
     }
 
@@ -107,7 +107,7 @@
 
         padding: 1rem;
 
-        width: 80%;
+        width: 100%;
         height: 100vh;
 
         display: flex;
@@ -119,8 +119,11 @@
         background-color: var(--white-color);
         background-size: cover;
         background-repeat: repeat;
-        box-shadow: 0, 0, 20px rgba(168, 168, 168, 0.15);
-
+        box-shadow: 
+        0 7px 15px 0 rgba(0, 0, 0, .13), 
+        0 1px 4px 0 rgba(0, 0, 0, .11);
+        transform-origin: top;
+        
         svg {
             width: 35px;
             height: 35px;
@@ -136,17 +139,17 @@
             width: 100%;
 
             display: flex;
-            justify-content: flex-start;
-            align-items: flex-start;
+            justify-content: center;
+            align-items: center;
             flex-direction: column;
 
             li {
-                margin: 1rem;
+                margin: .2rem;
 
                 a {
-                    color: var(--gray-color);
+                    color: var(--black-color);
                     text-decoration: none;
-                    font-size: 1rem;
+                    font-size: 1.5rem;
                     text-transform: uppercase;
                     font-weight: 500;
 
