--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -46,7 +46,7 @@
         border-radius: 50%;
 
         background-color: #fff;
-
+        box-shadow: 0 7px 15px 0 rgba(0, 0, 0, .13), 0 1px 4px 0 rgba(0, 0, 0, .11);
         img {
             width: 50%;
             height: 50%;
