--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -31,7 +31,7 @@
     }
 
     @media screen and (max-width: 450px) {
-        padding-top: 6rem 1rem 2rem;
+        padding: 6rem 1rem 2rem;
     }
 }
 
@@ -65,7 +65,17 @@
         flex-direction: row;
         width: auto;
 
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+        box-shadow: 
+        -10px 10px 0px rgba(33, 33, 33, 0.5), 
+        -20px 20px 0px rgba(33, 33, 33, 0.3), 
+        -30px 30px 0px rgba(33, 33, 33, 0.1), 
+        -40px 40px 0px rgba(33, 33, 33, 0.03);
+
+        @media screen and (max-width: 425px) {
+            box-shadow: 
+            -5px 5px 0px rgba(33, 33, 33, 0.5), 
+            -10px 10px 0px rgba(33, 33, 33, 0.3);
+        }
     }
 
     .tag-cmp {
@@ -123,31 +133,33 @@
     }
 
     div:nth-child(2) {
-        margin: 1.75rem;
-        width: 150px;
-        height: 150px;
+        margin-left: 3.75rem;
+        width: 100px;
+        height: 100px;
     }
 
     div:nth-child(3) {
-        width: 70px;
-        height: 70px;
+        margin-left: 5.75rem;
+        width: 100px;
+        height: 100px;
+    }
+
+    div:nth-child(4) {
+        margin-left: 3.75rem;
+        width: 100px;
+        height: 100px;
+    }
+
+    div:nth-child(5) {
+        width: 100px;
+        height: 100px;
     }
 
     @media screen and (min-width: 2000px) {
 
-        div:nth-child(1) {
+        div:nth-child(1), div:nth-child(2), div:nth-child(3), div:nth-child(4), div:nth-child(5) {
             width: 400px;
             height: 400px;
-        }
-
-        div:nth-child(2) {
-            width: 170px;
-            height: 170px;
-        }
-
-        div:nth-child(3) {
-            width: 200px;
-            height: 200px;
         }
     }
 
@@ -156,6 +168,10 @@
         flex-direction: row;
         flex-wrap: wrap;
         margin-left: 0;
+
+        div:nth-child(2), div:nth-child(2), div:nth-child(3), div:nth-child(4), div:nth-child(5) {
+            margin-left: 0;
+        }
 
         div {
             margin: 1rem;
