--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -44,7 +44,7 @@
         }
 
         &:hover {
-            box-shadow: 0 0 25px #fef4f5;
+            box-shadow: 0 7px 15px 0 rgba(0, 0, 0, .13), 0 1px 4px 0 rgba(0, 0, 0, .11);
         }
 
         @media screen and (max-width: 450px) {
@@ -63,7 +63,7 @@
 }
 
 .app__footer-form {
-    width: 605px;
+    width: 100%;
     flex-direction: column;
     margin: 1rem 2rem;
 
@@ -93,7 +93,7 @@
         }
 
         &:hover {
-            box-shadow: 0 0 25px var(--primary-color);
+            box-shadow: 0 7px 15px 0 rgba(0, 0, 0, .13), 0 1px 4px 0 rgba(0, 0, 0, .11);
         }
     }
 
