Slight design changes

--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -138,9 +138,13 @@
     position: relative;
     flex-direction: column;
 
-    h1 {
+    h4 {
         margin-top: 1rem;
         line-height: 1.5rem;
+    }
+
+    p {
+        margin-top: 10px;
     }
 
     .app__work-tag {
