--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-items: center;
 
-    padding: 1rem 2rem;
+    padding: .5rem 2rem;
     background: rgba(255, 255, 255, 0.25);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
@@ -15,12 +15,12 @@
 }
 
 .app__navbar-logo {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    // display: flex;
+    // justify-content: flex-start;
+    // align-items: center;
 
     img {
-        width: 90px;
+        width: 2.5rem;
         height: auto;
 
         @media screen and (min-width: 2000px) {
@@ -30,7 +30,7 @@
     }
 }
 
-.app__navbar-links {
+#light .app__navbar-links {
     flex: 1;
     display: flex;
     justify-content: center;
@@ -80,7 +80,57 @@
     }
 }
 
-.app__navbar-menu {
+#dark .app__navbar-links {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    list-style: none;
+
+    li {
+        margin: 0 1rem;
+        cursor: pointer;
+        flex-direction: column;
+
+        div {
+            width: 5px;
+            height: 5px;
+
+            background: transparent;
+            border-radius: 50%;
+
+            margin-bottom: 5px;
+        }
+
+        a {
+            color: var(--white-color);
+            text-decoration: none;
+            flex-direction: column;
+
+            text-transform: uppercase;
+            font-weight: 500;
+
+            transition: all 0.3 ease-in-out;
+
+            &:hover {
+                color: var(--secondary-color);
+            }
+        }
+
+        &:hover {
+            div {
+                background: var(--secondary-color);
+            }
+        }
+    }
+
+    @media screen and (max-width: 900px) {
+        display: none;
+    }
+}
+
+#light .app__navbar-menu {
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -115,10 +165,10 @@
         align-items: flex-end;
         flex-direction: column;
 
-        background: url('../../assets/bgWhite.png');
+        // background: url('../../assets/bgWhite.png');
         background-color: var(--white-color);
-        background-size: cover;
-        background-repeat: repeat;
+        // background-size: cover;
+        // background-repeat: repeat;
         box-shadow: 
         0 7px 15px 0 rgba(0, 0, 0, .13), 
         0 1px 4px 0 rgba(0, 0, 0, .11);
@@ -169,4 +219,103 @@
     @media screen and (min-width: 900px) {
         display: none;
     }
+}
+
+#dark .app__navbar-menu {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    // background: var(--secondary-color);
+
+    svg {
+        width: 25px;
+        height: 25px;
+        color: var(--white-color);
+    }
+
+    div {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 5;
+
+        padding: 1rem;
+
+        width: 100%;
+        height: 100vh;
+
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
+        flex-direction: column;
+
+        // background: url('../../assets/bgWhite.png');
+        background-color: var(--dark-color);
+        // background-size: cover;
+        // background-repeat: repeat;
+        box-shadow: 
+        0 7px 15px 0 rgba(0, 0, 0, .13), 
+        0 1px 4px 0 rgba(0, 0, 0, .11);
+        transform-origin: top;
+        
+        svg {
+            width: 35px;
+            height: 35px;
+            color: var(--secondary-color);
+            // margin: 0.5rem 1rem;
+            margin-top: 0.5rem;
+            margin-right: 1rem;
+        }
+
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+
+            li {
+                margin-bottom: 1rem;
+
+                a {
+                    color: var(--white-color);
+                    text-decoration: none;
+                    font-size: 1.5rem;
+                    text-transform: uppercase;
+                    font-weight: 500;
+
+                    transition: all 0.3 ease-in-out;
+
+                    &:hover {
+                        color: var(--secondary-color-dark);
+                    }
+                    
+                }
+            }
+        }
+
+        @media screen and (min-width: 900px) {
+            display: none;
+        }
+    }
+    @media screen and (min-width: 900px) {
+        display: none;
+    }
+}
+
+.css-j204z7-MuiFormControlLabel-root {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 }
