--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -22,6 +22,15 @@
 
     margin: 2rem;
 
+    h2 {
+        text-transform: uppercase;
+        margin-top: 20px;
+    }
+
+    p {
+        margin-top: 10px;
+    }
+
     img {
         width: 100%;
         height: 170px;
