--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -25,7 +25,7 @@
         border-radius: 10px;
 
         cursor: pointer;
-        background-color: #fef4f5;
+        background-color: #ffeaec;
         transition: all 0.3s ease-in-out;
 
         img {
@@ -44,6 +44,7 @@
         }
 
         &:hover {
+            background-color: #ffd3d8;
             box-shadow: 0 7px 15px 0 rgba(0, 0, 0, .13), 0 1px 4px 0 rgba(0, 0, 0, .11);
         }
 
@@ -59,7 +60,11 @@
 }
 
 .app__footer-cards .app__footer-card:last-child {
-    background-color: #f2f7fb;
+    background-color: var(--altcolor-3);
+}
+
+.app__footer-cards .app__footer-card:last-child:hover {
+    background-color: #fff8ca;
 }
 
 .app__footer-form {
@@ -72,7 +77,7 @@
         margin: 0.75rem 0;
         border-radius: 10px;
         cursor: pointer;
-        background-color: var(--primary-color);
+        background-color: var(--primary-color) !important;
         
         transition: all 0.3s ease-in-out;
 
@@ -81,10 +86,10 @@
            padding: 0.95rem;
             border: none;
             border-radius: 7px;
-            background-color: var(--primary-color);
+            background-color: var(--primary-color) !important;
 
             font-family: var(--font-base);
-            color: var(--secondary-color);
+            color: var(--secondary-color) !important;
             outline: none;
         }
 
@@ -104,7 +109,7 @@
         background-color: var(--secondary-color);
 
         font-weight: 500;
-        color: var(--primary-color);
+        color: var(--white-color) !important;
         outline: none;
         margin: 2rem 0 0 0;
 
