--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -1,9 +1,9 @@
 #home {
     position: relative;
-    background: url('../../assets/bgIMG.png');
-    background-size: cover;
-    background-repeat: repeat;
-    background-position: center;
+    // background: url('../../assets/bgIMG.png');
+    // background-size: cover;
+    // background-repeat: repeat;
+    // background-position: center;
 
     .app__wrapper {
         padding: 0;
@@ -50,7 +50,7 @@
     }
 }
 
-.app__header-badge {
+#light .app__header-badge {
     width: 100%;
     display: flex;
     justify-content: flex-end;
@@ -71,10 +71,63 @@
         -30px 30px 0px rgba(33, 33, 33, 0.1), 
         -40px 40px 0px rgba(33, 33, 33, 0.03);
 
-        @media screen and (max-width: 425px) {
+        @media screen and (max-width: 450px) {
             box-shadow: 
             -5px 5px 0px rgba(33, 33, 33, 0.5), 
             -10px 10px 0px rgba(33, 33, 33, 0.3);
+        }
+    }
+
+    .tag-cmp {
+        flex-direction: column;
+        margin-top: 3rem;
+
+        p {
+            width: 100%;
+            text-transform: uppercase;
+            text-align: right;
+        }
+    }
+
+    span {
+        font-size: 2.5rem;
+
+        @media screen and (min-width: 2000px) {
+            font-size: 5rem;
+        }
+    }
+
+    @media screen and (max-width: 1200px) {
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+}
+
+#dark .app__header-badge {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+
+    .badge-cmp,
+    .tag-cmp {
+        padding: 1rem;
+        border: var(--white-color);
+        border-radius: 15px;
+        flex-direction: row;
+        width: auto;
+
+        box-shadow: 
+        -10px 10px 0px rgba(219, 12, 129, 0.5), 
+        -20px 20px 0px rgba(219, 12, 129, 0.3), 
+        -30px 30px 0px rgba(219, 12, 129, 0.1), 
+        -40px 40px 0px rgba(219, 12, 129, 0.03);
+    
+        @media screen and (max-width: 450px) {
+            box-shadow: 
+                -5px 5px 0px rgba(219, 12, 129, 0.5), 
+                -10px 10px 0px rgba(219, 12, 129, 0.3);
         }
     }
 
@@ -179,7 +232,7 @@
     }
 }
 
-.app__header-img {
+#light .app__header-img {
     height: 100%;
     width: auto;
     
@@ -193,7 +246,40 @@
         width: 100%;
         object-fit: contain;
         z-index: 1;
-        // filter: grayscale(1);
+    }
+
+    .overlay_circle {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+
+        z-index: 0;
+        width: 100%;
+        height: 90%;
+    }
+
+    @media screen and (max-width: 1200px) {
+        margin: 2rem 0;
+    }
+}
+
+#dark .app__header-img {
+
+    height: 100%;
+    width: auto;
+    
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    position: relative;
+
+    img {
+        width: 100%;
+        object-fit: contain;
+        z-index: 1;
+        filter: grayscale(.1);
     }
 
     .overlay_circle {
