8 months anniversary - first commit

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,7 +21,8 @@
 
 #light #home, 
 #light #works, 
-#light #testimonials {
+#light #testimonials,
+#light #valxed {
   background-color: var(--primary-color);
 }
 
@@ -33,7 +34,8 @@
 
 #dark #home, 
 #dark #works, 
-#dark #testimonials {
+#dark #testimonials,
+#dark #valxed {
   background-color: var(--primary-color-dark);
 }
 
