--- a/src/container/Anniversary/Anniversary.scss
+++ b/src/container/Anniversary/Anniversary.scss
@@ -1,54 +1,51 @@
-.app__testimonials {
+// AnniversaryPage.scss
+
+.anniversary-page {
     flex: 1;
     flex-direction: column;
     width: 100%;
-}
 
-#light .app__testimonial-item {
-    width: 60%;
-    min-height: 320px;
-    background-color: var(--white-color);
-
-    display: flex;
-    flex-direction: row;
-    padding: 2rem;
-    border-radius: 15px;
-    box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease-in-out;
-
-    img {
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        object-fit: cover;
+    header {
+        margin-bottom: 40px;
+        text-align: center;
     }
 
-    @media screen and (min-width: 2000px) {
-        min-height:450px;
-        
-        img {
-            width: 150px;
-            height: 150px;
-        }
+    h1 {
+        font-size: 2.5rem;
+        color: #ff1493;
     }
 
-    @media screen and (max-width: 850px) {
-        width: 100%;
+    h2 {
+        font-size: 2rem;
+        color: #ffc2dc;
+        margin-bottom: 20px;
     }
 
-    @media screen and (max-width: 600px) {
-        flex-direction: column;
+    p {
+        font-size: 1.2rem;
+        color: var(--lightGray-color);
+        line-height: 1.6;
+    }
+
+    .gallery-section {
+        margin: 40px 0;
+    }
+
+    footer {
+        margin-top: 40px;
+        color: #777;
     }
 }
 
-#dark .app__testimonial-item {
-    width: 60%;
-    min-height: 320px;
+#light .app__anniversary-item {
+    width: auto;
+    min-height: auto;
     background-color: var(--lightGray-color);
 
     display: flex;
     flex-direction: row;
-    padding: 2rem;
+    padding: 1rem;
+    margin-top: 2rem;
     border-radius: 15px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease-in-out;
@@ -60,14 +57,14 @@
         object-fit: cover;
     }
 
-    @media screen and (min-width: 2000px) {
-        min-height:450px;
-        
-        img {
-            width: 150px;
-            height: 150px;
-        }
-    }
+    // @media screen and (min-width: 2000px) {
+    //     min-height: 450px;
+
+    //     img {
+    //         width: 150px;
+    //         height: 150px;
+    //     }
+    // }
 
     @media screen and (max-width: 850px) {
         width: 100%;
@@ -78,13 +75,51 @@
     }
 }
 
-.app__testimonial-content {
+#dark .app__anniversary-item {
+    width: auto;
+    min-height: auto;
+    background-color: var(--lightGray-color);
+
+    display: flex;
+    flex-direction: row;
+    padding: 1rem;
+    margin-top: 2rem;
+    border-radius: 15px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease-in-out;
+
+    img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        object-fit: cover;
+    }
+
+    // @media screen and (min-width: 2000px) {
+    //     min-height: 450px;
+
+    //     img {
+    //         width: 150px;
+    //         height: 150px;
+    //     }
+    // }
+
+    @media screen and (max-width: 850px) {
+        width: 100%;
+    }
+
+    @media screen and (max-width: 600px) {
+        flex-direction: column;
+    }
+}
+
+.app__anniversary-content {
     flex: 1;
-    height: 100%;
+    // height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: flex-start;
+    align-items: center;
 
     padding: 0 2rem;
     text-align: left;
@@ -100,7 +135,7 @@
         font-weight: 600;
         color: var(--secondary-color) !important;
 
-        margin-top: 2rem;
+        margin-top: .5rem;
     }
 
     h5 {
@@ -112,7 +147,11 @@
 
 }
 
-.app__testimonial-btns {
+.interactive-section {
+    
+}
+
+.app__anniversary-btns {
     flex-direction: row;
     margin-top: 1rem;
 
@@ -120,7 +159,7 @@
         width: 50px;
         height: 50px;
         border-radius: 50%;
-        background-color: var(--white-color);
+        background-color: var(--lightGray-color);
 
         margin: 1rem;
         transition: all 0.3s ease-in-out;
@@ -141,7 +180,7 @@
     }
 }
 
-.app__testimonial-brands {
+.app__anniversary-pics {
     width: 80%;
     flex-wrap: wrap;
     margin-top: 2rem;
@@ -156,15 +195,15 @@
             border-radius: 10px;
             object-fit: cover;
 
-            filter: grayscale(1);
+            // filter: grayscale(1);
             cursor: pointer;
         }
 
-        &:hover {
-            img {
-                filter: grayscale(0);
-            }
-        }
+        // &:hover {
+        //     img {
+        //         filter: grayscale(0);
+        //     }
+        // }
 
         @media screen and (min-width: 2000px) {
             width: 210px;
