--- a/src/container/Works/Works.scss
+++ b/src/container/Works/Works.scss
@@ -27,7 +27,7 @@
 
         &:hover {
             background-color: var(--secondary-color);
-            color: #fff;
+            color: #fff !important;
         }
 
         @media screen and (min-width: 2000px) {
@@ -57,7 +57,6 @@
 
         background-color: #fff;
         color: #fff;
-        cursor: pointer;
         transition: all 0.3s ease;
 
         &:hover {
@@ -82,6 +81,7 @@
     height: 230px;
 
     position: relative;
+    cursor: pointer;
 
     img {
         width: 100%;
