--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -244,7 +244,8 @@
 
     img {
         width: 100%;
-        object-fit: contain;
+        height: auto;
+        // object-fit: contain;
         z-index: 1;
     }
 
@@ -260,13 +261,13 @@
     }
 
     @media screen and (max-width: 1200px) {
-        margin: 2rem 0;
+        margin: 6rem 0;
     }
 }
 
 #dark .app__header-img {
 
-    height: 100%;
+    height: 80%;
     width: auto;
     
     flex: 1;
@@ -277,9 +278,9 @@
 
     img {
         width: 100%;
-        object-fit: contain;
+        // object-fit: contain;
         z-index: 1;
-        filter: grayscale(.1);
+        // filter: grayscale(.1);
     }
 
     .overlay_circle {
@@ -290,10 +291,13 @@
 
         z-index: 0;
         width: 100%;
-        height: 90%;
+        height: auto;
+        padding: 0.5rem;
+
+        // border: solid green 4px;
     }
 
     @media screen and (max-width: 1200px) {
-        margin: 2rem 0;
+        margin: 6rem 0;
     }
 }
